--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
   "main": "lib/index.js",
   "dependencies": {
     "is-binary-path": "2.1.0",
-    "micro-should": "0.4.0",
     "normalize-path": "3.0.0",
     "readdirp": "github:paulmillr/readdirp"
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@types/node": "20.12.12",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
     "chai": "4.3.4",
-    "eslint": "8.7.0",
+    "eslint": "^8.57.0",
+    "globals": "^15.3.0",
     "rimraf": "5.0.5",
     "sinon": "12.0.1",
     "sinon-chai": "3.7.0",
     "typescript": "5.4.2",
+    "typescript-eslint": "^7.10.0",
     "upath": "2.0.1"
   },
   "files": [
@@ -44,7 +45,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint --ext=ts --report-unused-disable-directives --ignore-path .gitignore .",
+    "lint": "eslint .",
     "test": "npm run build && npm run lint && node --test"
   },
   "keywords": [
