--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "esModuleInterop": true,
     "baseUrl": ".",
   },
-  "include": ["src", "types"],
+  "include": ["src/v4.ts"],
   "exclude": ["node_modules", "lib"]
 }
