--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [18, 20, 22]
+        version: [14, 16, 18, 20, 22]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
