--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,12 +1,8 @@
 name: Lint
 
 on:
-  pull_request:
-  workflow_dispatch:
-
-env:
-  FORCE_COLOR: 2
-
+  - push
+  - pull_request
 jobs:
   test:
     name: v${{ matrix.version }} @ ${{ matrix.os }}
