--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,8 +1,10 @@
 {
-  "extends": "@paulmillr/jsbt/tsconfig.cjs.json",
+  "extends": "@paulmillr/jsbt/tsconfig.esm.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": ".",
+    "outDir": "esm",
+    "module": "es2020",
+    "moduleResolution": "bundler",
     "strict": false,
     "noImplicitReturns": false
   },
