--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -5,7 +5,7 @@
     "outDir": "esm",
     "module": "es2020",
     "moduleResolution": "bundler",
-    "strict": false,
+    "strict": true,
     "noImplicitReturns": false
   },
   "include": [
