chore: remove node 16 support
node 16.x is incapable of running the test suite thanks to one or more
bugs which never had their fixes backported. Primarily, the inability to
have nested `beforeEach` was fixed in all later versions but not in 16.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [16, 18, 20, 22]
+        node: [18, 20, 22]
         os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
       - uses: actions/checkout@1e31de5234b9f8995739874a8ce0492dc87873e2 # v4
