Add typescript isolatedDeclarations for improved docs.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": ".",
     "noImplicitReturns": false,
     "sourceMap": false,
-    "declarationMap": false
+    "declarationMap": false,
+    "isolatedDeclarations": true
   },
   "include": [
     "src"
