--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -7,7 +7,8 @@
     "moduleResolution": "bundler",
     "noImplicitReturns": false,
     "sourceMap": false,
-    "declarationMap": false
+    "declarationMap": false,
+    "isolatedDeclarations": true
   },
   "include": [
     "src"
