--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@paulmillr/jsbt": "0.2.1",
     "@types/node": "20.14.8",
     "chai": "4.3.4",
-    "micro-should": "github:paulmillr/micro-should",
+    "micro-should": "0.5.0",
     "prettier": "3.1.1",
     "sinon": "12.0.1",
     "sinon-chai": "3.7.0",
