--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   },
   "devDependencies": {
     "@paulmillr/jsbt": "0.3.1",
-    "@types/node": "20.14.8",
-    "@types/sinon": "^17.0.3",
-    "micro-should": "0.5.0",
+    "@types/node": "22.10.10",
+    "@types/sinon": "17.0.3",
+    "micro-should": "0.5.1",
     "prettier": "3.1.1",
     "sinon": "12.0.1",
     "typescript": "5.5.2",
