--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,11 +1,11 @@
 {
-  "extends": "@paulmillr/jsbt/tsconfig.esm.json",
+  "extends": "@paulmillr/jsbt/tsconfig.cjs.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "esm",
-    "module": "es2020",
-    "moduleResolution": "bundler",
+    "module": "node16",
+    "moduleResolution": "node16",
     "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "outDir": ".",
     "noImplicitReturns": false,
     "sourceMap": false,
     "declarationMap": false
