--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
   "extends": "@paulmillr/jsbt/tsconfig.esm.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "esm",
-    "module": "es2020",
-    "moduleResolution": "bundler",
+    "outDir": ".",
+    "module": "node16",
+    "moduleResolution": "node16",
     "allowSyntheticDefaultImports": true,
     "noImplicitReturns": false,
     "sourceMap": false,
