chore: consolidate CI stages

--- a/.github/workflows/test-js.yml
+++ b/.github/workflows/test-js.yml
@@ -22,64 +22,13 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
       - run: npm run lint --if-present
-  node_18:
+  node:
     name: Node v${{ matrix.version }} @ ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        version: [18]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-    steps:
-      - uses: actions/checkout@1e31de5234b9f8995739874a8ce0492dc87873e2 # v4
-      - name: Use Node.js ${{ matrix.version }}
-        uses: actions/setup-node@8f152de45cc393bb48ce5d89d36b731f54556e65 # v4
-        with:
-          node-version: ${{ matrix.version }}
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm test
-  node_20:
-    name: Node v${{ matrix.version }} @ ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        version: [20]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-    steps:
-      - uses: actions/checkout@1e31de5234b9f8995739874a8ce0492dc87873e2 # v4
-      - name: Use Node.js ${{ matrix.version }}
-        uses: actions/setup-node@8f152de45cc393bb48ce5d89d36b731f54556e65 # v4
-        with:
-          node-version: ${{ matrix.version }}
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm test
-  node_22:
-    name: Node v${{ matrix.version }} @ ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        version: [22]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-    steps:
-      - uses: actions/checkout@1e31de5234b9f8995739874a8ce0492dc87873e2 # v4
-      - name: Use Node.js ${{ matrix.version }}
-        uses: actions/setup-node@8f152de45cc393bb48ce5d89d36b731f54556e65 # v4
-        with:
-          node-version: ${{ matrix.version }}
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm test
-  node_24:
-    name: Node v${{ matrix.version }} @ ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        version: [24]
+        version: [18, 20, 22, 24]
         os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
       - uses: actions/checkout@1e31de5234b9f8995739874a8ce0492dc87873e2 # v4
@@ -91,7 +40,7 @@ jobs:
       - run: npm run build --if-present
       - run: npm test
   bun:
-    needs: node_22
+    needs: node
     name: Bun
     runs-on: macOS-latest
     steps:
