--- a/.github/workflows/test-js.yml
+++ b/.github/workflows/test-js.yml
@@ -1,51 +1,13 @@
 name: Run JS tests
-
-# 3 different jobs are not combined into 1.
-# In theory, it could be less error-prone:
-# 1. Chokidar does huge load of IO / FS.
-# 2. Github CI use virtual machines which can reuse single physical machine.
-# 3. If same physical machine has too much IO usage, we have more chance of bugs.
-
 on:
   - push
   - pull_request
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@1e31de5234b9f8995739874a8ce0492dc87873e2 # v4
-      - uses: actions/setup-node@8f152de45cc393bb48ce5d89d36b731f54556e65 # v4
-        with:
-          registry-url: 'https://registry.npmjs.org'
-          cache: npm
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm run lint --if-present
-  node:
-    name: Node v${{ matrix.version }} @ ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+  test-js:
+    name: 'jsbt v0.4.1'
+    uses: paulmillr/jsbt/.github/workflows/test-js.yml@2318b9efe24831b4bd4cadf720c96f071c69c64d
     strategy:
-      fail-fast: false
       matrix:
-        version: [18, 20, 22, 24]
         os: [ubuntu-latest, windows-latest, macOS-latest]
-    steps:
-      - uses: actions/checkout@1e31de5234b9f8995739874a8ce0492dc87873e2 # v4
-      - name: Use Node.js ${{ matrix.version }}
-        uses: actions/setup-node@8f152de45cc393bb48ce5d89d36b731f54556e65 # v4
-        with:
-          node-version: ${{ matrix.version }}
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm test
-  bun:
-    needs: node
-    name: Bun
-    runs-on: macOS-latest
-    steps:
-      - uses: actions/checkout@1e31de5234b9f8995739874a8ce0492dc87873e2 # v4
-      - uses: oven-sh/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5 # v2.0.1
-      - run: bun install
-      - run: bun run build
-      - run: bun run test:bun
+    with:
+      runs-on: ${{ matrix.os }}
