--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chokidar",
   "description": "Minimal and efficient cross-platform file watching library",
-  "version": "4.0.3",
+  "version": "5.0.0",
   "type": "module",
   "homepage": "https://github.com/paulmillr/chokidar",
   "author": "Paul Miller (https://paulmillr.com)",
@@ -24,20 +24,19 @@
     }
   },
   "dependencies": {
-    "readdirp": "^4.1.0"
+    "readdirp": "^5.0.0"
   },
   "devDependencies": {
-    "@paulmillr/jsbt": "0.4.1",
-    "@types/node": "22.10.10",
-    "micro-should": "0.5.3",
+    "@paulmillr/jsbt": "0.4.5",
+    "@types/node": "24.10.1",
     "prettier": "3.5.2",
     "tinyspy": "3.0.2",
-    "typescript": "5.8.2",
+    "typescript": "5.9.2",
     "upath": "2.0.1"
   },
   "sideEffects": false,
   "engines": {
-    "node": ">= 14.18.0"
+    "node": ">= 20.19.0"
   },
   "repository": {
     "type": "git",
@@ -52,7 +51,7 @@
     "lint": "prettier --check src",
     "format": "prettier --write src",
     "test": "node index.test.js",
-    "test:bun": "bun index.test.js"
+    "test:bun1": "bun index.test.js"
   },
   "keywords": [
     "fs",
